<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/layout_anim_container"
    android:background="@color/colorPrimaryDark"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.CreateExamFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.textfield.TextInputLayout
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/til_test_title"
        app:boxStrokeColor="@android:color/white"
        android:layout_margin="18dp"
        android:textColorHint="@android:color/white"
        style="@style/LoginTextInputLayoutStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ti_test_title"
            android:lines="1"
            android:nextFocusDown="@id/et_question_title"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            app:boxStrokeColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/test_title" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:layout_margin="18dp"
        android:text="@string/question_1"
        app:layout_constraintTop_toBottomOf="@+id/til_test_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/tv_show_questions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <ScrollView
        app:layout_constraintBottom_toTopOf="@+id/btn_save_question"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_show_questions"
        android:layout_width="0dp"
        android:layout_height="0dp">
        <LinearLayout
            android:id="@+id/ll_question_bar"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/et_question_title"
                android:nextFocusDown="@id/et_first_answer"
                android:padding="4dp"
                android:hint="@string/put_question_here"
                android:layout_marginTop="18dp"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:textSize="22sp"
                android:background="@drawable/edt_text_background"
                android:lines="4"
                android:gravity="top|start"
                android:maxLines="5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:nextFocusDown="@id/et_second_answer"
                android:id="@+id/et_first_answer"
                android:padding="4dp"
                android:hint="@string/_1"
                android:layout_marginTop="18dp"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:textSize="20sp"
                android:background="@drawable/edt_text_background"
                android:lines="2"
                android:gravity="top|start"
                android:maxLines="2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <RadioButton
                android:textColor="@android:color/white"
                android:id="@+id/rb_one"
                android:text="@string/correct"
                android:layout_marginEnd="18dp"
                android:layout_marginStart="18dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <EditText
                android:nextFocusDown="@id/et_third_answer"
                android:id="@+id/et_second_answer"
                android:padding="4dp"
                android:hint="@string/_2"
                android:layout_marginTop="18dp"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:textSize="20sp"
                android:background="@drawable/edt_text_background"
                android:lines="2"
                android:gravity="top|start"
                android:maxLines="2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <RadioButton
                android:textColor="@android:color/white"
                android:id="@+id/rb_two"
                android:text="@string/correct"
                android:layout_marginEnd="18dp"
                android:layout_marginStart="18dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <EditText
                android:nextFocusDown="@id/et_fourth_answer"
                android:id="@+id/et_third_answer"
                android:padding="4dp"
                android:hint="@string/_3"
                android:layout_marginTop="18dp"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:textSize="20sp"
                android:background="@drawable/edt_text_background"
                android:lines="2"
                android:gravity="top|start"
                android:maxLines="2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <RadioButton
                android:textColor="@android:color/white"
                android:id="@+id/rb_tree"
                android:text="@string/correct"
                android:layout_marginEnd="18dp"
                android:layout_marginStart="18dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/et_fourth_answer"
                android:padding="4dp"
                android:hint="@string/_4"
                android:layout_marginTop="18dp"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:textSize="20sp"
                android:background="@drawable/edt_text_background"
                android:lines="2"
                android:gravity="top|start"
                android:maxLines="2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <RadioButton
                android:textColor="@android:color/white"
                android:id="@+id/rb_four"
                android:text="@string/correct"
                android:layout_marginEnd="18dp"
                android:layout_marginStart="18dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_save_question"
        android:text="finish"
        android:textAllCaps="false"
        android:layout_margin="8dp"
        style="@style/Widget.AppCompat.Button.Colored"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_next_question"
        android:layout_margin="8dp"
        android:text="next question"
        android:textAllCaps="false"
        style="@style/Widget.AppCompat.Button.Colored"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</androidx.constraintlayout.widget.ConstraintLayout>