<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragment.HomeFragment">

    <androidx.cardview.widget.CardView
        android:elevation="8dp"
        app:cardCornerRadius="8dp"
        android:layout_margin="18dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/iv_test_banner"
                android:src="@drawable/test"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="0dp"
                android:layout_height="150dp"/>
            <TextView
                android:layout_margin="6dp"
                android:id="@+id/tv_header_banner"
                android:textColor="@android:color/black"
                android:text="@string/do_some_test"
                app:layout_constraintTop_toBottomOf="@+id/iv_test_banner"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:textSize="24sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/btn_open_test"
                app:layout_constraintTop_toBottomOf="@+id/tv_header_banner"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:textAllCaps="false"
                android:text="@string/open"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:elevation="8dp"
        app:cardCornerRadius="8dp"
        android:layout_margin="18dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/iv_create_banner"
                android:src="@drawable/tools"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="0dp"
                android:layout_height="150dp"/>
            <TextView
                android:layout_margin="6dp"
                android:id="@+id/tv_second_banner"
                android:textColor="@android:color/black"
                android:text="@string/create_your_own_tests"
                app:layout_constraintTop_toBottomOf="@+id/iv_create_banner"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:textSize="24sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/btn_create_test"
                app:layout_constraintTop_toBottomOf="@+id/tv_second_banner"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:textAllCaps="false"
                android:text="@string/create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>